<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <RelativeLayout
            android:background="@color/puce"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l3_textField"
                android:textSize="30dp"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/etNumber1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/l3_textField1"
            />
        <EditText
            android:id="@+id/etNumber2"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/l3_textField2"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnCong"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/l3_btn"
                />
            <Button
                android:id="@+id/btnTru"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintRight_toLeftOf="@+id/btnNhan"
                app:layout_constraintLeft_toRightOf="@+id/btnCong"
                android:text="@string/l3_btn1"
                />
            <Button
                android:text="@string/l3_btn2"
                android:id="@+id/btnNhan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintRight_toLeftOf="@+id/btnTru"
                app:layout_constraintLeft_toRightOf="@+id/btnChia"/>
            <Button
                android:id="@+id/btnChia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/l3_btn3"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout
            android:background="@color/chestnut"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tfTextResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l3_textField3"
                android:textSize="30dp"
                />
        </RelativeLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>