<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@color/teal_200"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l4_textField"
                android:textSize="30dp"
                />

        </RelativeLayout>
        <EditText
            android:id="@+id/l4_textTaiKhoan"
            android:hint="@string/l4_textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/l4_textMatKhau"
            android:hint="@string/l4_textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            />
        <EditText
            android:id="@+id/l4_textNgaySinh"
            android:hint="@string/l4_textField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            />
        <EditText
            android:id="@+id/l4_textEmail"
            android:hint="@string/l4_textField4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng Ký"
            />
        <LinearLayout
            android:background="@color/green"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/l4_showTextTaiKhoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
            <TextView
                android:id="@+id/l4_showTextMatKhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
            <TextView
                android:id="@+id/l4_showTextNgaySinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
            <TextView
                android:id="@+id/l4_showTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>