<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.1"
           android:layout_gravity="center"
           >

           <TextView
               android:id="@+id/tfTextTitle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/l2_textField"
               android:textSize="30dp"
               android:textStyle="bold"
               />
       </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="4dp"
                app:dividerColor="@color/teal_200"
                />
            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l2_textField1"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:paddingEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="end">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l2_textField2"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>